Fixed username visibility when logged in

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -46,6 +46,7 @@ height: 110px;
 	padding: 15px;
 	float: right;
 	text-transform: uppercase;
+	color: #fff;
 }
 
 #submit-home{
